<resources>
    <string name="app_name">Converter</string>
    <string name="type_code">Введите код</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="remove"><![CDATA[<]]></string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="share">Поделиться</string>
    <string name="send_by_post">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="launch_camera">Сменить фото профиля</string>
    <string name="person_info">Ilyas Sabitov\ni.m.a.m.sabitov@mail.com</string>
    <string name="cam_not_found">Камера не найдена!</string>
    <string name="type_message">...введите текст</string>
    <string name="choose_post_app">Выберите приложение для отправки почты</string>
    <string name="not_correct_pincode">Не полный пин код</string>
</resources>