<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalPageActivity">

    <ImageView
        android:id="@+id/person_image_view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mailTextView"
        android:background="@drawable/bg_person_image_view"
        android:elevation="4dp" />

    <TextView
        style="@style/person_info_style"
        android:id="@+id/mailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shareBtn"
        android:text="@string/person_info"/>

    <Button
        style="@style/btn_personal_page_style"
        android:id="@+id/shareBtn"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:text="@string/share"/>

    <Button
        style="@style/btn_personal_page_style"
        android:id="@+id/postSendBtn"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shareBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/send_by_post"/>

    <Button
        style="@style/btn_personal_page_style"
        android:id="@+id/callBtn"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postSendBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/call"/>

    <Button
        style="@style/btn_personal_page_style"
        android:id="@+id/launchCameraBtn"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/callBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/launch_camera"/>

</androidx.constraintlayout.widget.ConstraintLayout>